same solution without revealing testfx packages in module-info.java