@@ -20,7 +20,7 @@ tasks.withType(JavaCompile) {
     targetCompatibility = JavaVersion.VERSION_11
 }
 test {
-    jvmArgs =["--add-exports","javafx.graphics/com.sun.javafx.application=org.testfx"]
+    jvmArgs =["--add-reads","kprog.main=org.testfx.junit","--add-exports","javafx.graphics/com.sun.javafx.application=org.testfx"]
 }
 javafx {
     version = "17.0.2"
@@ -46,9 +46,9 @@ dependencies {
     // https://mvnrepository.com/artifact/junit/junit
     testImplementation group: 'junit', name: 'junit', version: '4.13'
     // https://mvnrepository.com/artifact/org.testfx/testfx-core
-    implementation group: 'org.testfx', name: 'testfx-core', version: '4.0.16-alpha'
+    testImplementation group: 'org.testfx', name: 'testfx-core', version: '4.0.16-alpha'
     // https://mvnrepository.com/artifact/org.testfx/testfx-junit
-    implementation group: 'org.testfx', name: 'testfx-junit', version: '4.0.15-alpha'
+    testImplementation group: 'org.testfx', name: 'testfx-junit', version: '4.0.15-alpha'
 }
 
 checkstyle {
